--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <h1>Team</h1>
 
-<h4> Nombre: Daniel Martinez </h4>
-<h3> Edad: 25 </<h3>
+<h4> Nombre: Juan Camilo Mejia </h4>
+<h3> Edad: 24 </<h3>
 
 </body>
 </html>
