--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
 <h4> Nombre: Juan Camilo Mejia </h4>
 <h3> Edad: 24 </<h3>
 
+<h4> Nombre: Daniel Martinez </h4>
+<h3> Edad: 25 </<h3>
+
 </body>
 </html>
