--- a/index.html
+++ b/index.html
@@ -13,5 +13,8 @@
 <h4> Nombre: Daniel Martinez </h4>
 <h3> Edad: 25 </<h3>
 
+<h4> Nombre: Henry Niño </h4>
+<h3> Edad: 37 </<h3>
+
 </body>
 </html>
