--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
 <h4> Nombre: Henry Niño </h4>
 <h3> Edad: 37 </<h3>
 
+    <h4> Nombre: Henry Niño </h4>
+    <h3> Edad: 37 </<h3>
+
 </body>
 </html>
