update: Cambios HFNG 2

--- a/index.html
+++ b/index.html
@@ -16,6 +16,12 @@
 <h4> Nombre: Henry Niño </h4>
 <h3> Edad: 37 </<h3>
 
+<h4> Nombre: Henry Niño </h4>
+<h3> Edad: 37 </<h3>
+
+<h4> Nombre: Henry Niño </h4>
+<h3> Edad: 37 </<h3>
+
     <h4> Nombre: Henry Niño </h4>
     <h3> Edad: 37 </<h3>
 
